<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nano_degree_title">My NanoDegree Portfolio</string>

    <!-- Home Screen App Names  -->
    <string name="first_app_name">Spotify Streamer</string>
    <string name="second_app_name">Scores App</string>
    <string name="third_app_name">Library App</string>
    <string name="fourth_app_name">Build It Bigger</string>
    <string name="fifth_app_name">XYZ Reader</string>
    <string name="sixth_app_name">My Own App</string>

</resources>
