<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_scroll_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:touchscreenBlocksFocus="false"
        android:transitionGroup="false">

            <TextView android:text="@string/nano_degree_title" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_myportfolio_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="#ff6c09" />

            <Button
                android:id="@+id/id_first_app"
                android:text="@string/first_app_name"
                android:drawableLeft="@drawable/first_app"
                android:layout_below="@+id/id_myportfolio_title"
                android:clickable="true"
                android:onClick="click_first_app"
                style="@style/AppButtons"
                />
            <Button
                android:id="@+id/id_second_app"
                android:text="@string/second_app_name"
                android:drawableLeft="@drawable/second_app"
                android:layout_below="@+id/id_first_app"
                android:clickable="true"
                android:onClick="click_second_app"
                style="@style/AppButtons"/>
            <Button
                android:id="@+id/id_third_app"
                android:text="@string/third_app_name"
                android:drawableLeft="@drawable/third_app"
                android:layout_below="@+id/id_second_app"
                android:clickable="true"
                android:onClick="click_third_app"
                style="@style/AppButtons"/>
            <Button
                android:id="@+id/id_fourth_app"
                android:text="@string/fourth_app_name"
                android:drawableLeft="@drawable/fourth_app"
                android:layout_below="@+id/id_third_app"
                android:clickable="true"
                android:onClick="click_fourth_app"
                style="@style/AppButtons"/>
            <Button
                android:id="@+id/id_fifth_app"
                android:text="@string/fifth_app_name"
                android:drawableLeft="@drawable/fifth_app"
                android:layout_below="@+id/id_fourth_app"
                android:clickable="true"
                android:onClick="click_fifth_app"
                style="@style/AppButtons"/>
            <Button
                android:id="@+id/id_sixth_app"
                android:text="@string/sixth_app_name"
                android:drawableLeft="@drawable/sixth_app"
                android:layout_below="@+id/id_fifth_app"
                android:clickable="true"
                style="@style/AppButtons.OwnAppButton"
                android:textStyle="bold|italic" />

    </RelativeLayout>
</ScrollView>